--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -3,7 +3,7 @@
 /* Header Styling */
 .custom-header {
   background-color: #000000;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   position: sticky;
   top: 0;
   z-index: 1000;
@@ -85,9 +85,9 @@
 @media (max-width: 1000px) {
   /* Add padding to the header */
   .custom-header {
-    padding: 0.5rem 1rem; /* Top-bottom and side padding */
+    padding: 0.5rem 1rem;
   }
-
+  
   /* Adjust burger icon positioning */
   .burger-icon {
     display: block;
